# MCP-Server-1

./: .env.example  pyproject.toml  test_server.py  test_server_2.py  test_server_token.py  test_server_token_deploy.py
client/: .env.example  client.py
server/: .env.example  Dockerfile  auth_utils.py  server.py
